WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210038
[Clang 10] Fix -Wimplicit-int-float-conversion compilation warnings in JavaScriptCore
https://bugs.webkit.org/show_bug.cgi?id=210038
Summary
[Clang 10] Fix -Wimplicit-int-float-conversion compilation warnings in JavaSc...
Fujii Hironori
Reported
2020-04-05 14:26:14 PDT
[Clang 10] Fix -Wimplicit-int-float-conversion compilation warnings in JavaScriptCore This is a sub-task of
Bug 204834
. Clang 10 reports a compilation warning in JavaScriptCore:
> ..\..\Source\JavaScriptCore\bytecode/CodeBlock.cpp(3002,24): warning: implicit conversion from 'unsigned long long' to 'double' changes value from 18446744073709551615 to 18446744073709551616 [-Wimplicit-int-float-conversion] > if (doubleResult > std::numeric_limits<size_t>::max()) > ~ ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
See also:
r259537
(which is for WTF)
Attachments
Patch
(2.12 KB, patch)
2020-04-05 14:32 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2020-04-05 14:32:56 PDT
Created
attachment 395528
[details]
Patch
Fujii Hironori
Comment 2
2020-04-06 13:08:16 PDT
Comment on
attachment 395528
[details]
Patch Clearing flags on attachment: 395528 Committed
r259588
: <
https://trac.webkit.org/changeset/259588
>
Fujii Hironori
Comment 3
2020-04-06 13:08:20 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2020-04-06 13:09:14 PDT
<
rdar://problem/61355692
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug